--- a/alfm_bem/alfm_bem_refs.bib
+++ b/alfm_bem/alfm_bem_refs.bib
@@ -1,48 +1,46 @@
 % ALFM-BEM Bibliography
-% References for related work
+% References for JMLR submission
 
 % Memory-Augmented Networks
 @article{Graves2014,
-  title={Neural {T}uring machines},
+  title={Neural {T}uring Machines},
   author={Graves, Alex and Wayne, Greg and Danihelka, Ivo},
   journal={arXiv preprint arXiv:1410.5401},
-  year={2014},
-  url={https://arxiv.org/abs/1410.5401}
+  year={2014}
 }
 
 @article{Graves2016,
   title={Hybrid computing using a neural network with dynamic external memory},
-  author={Graves, Alex and Wayne, Greg and Reynolds, Malcolm and others},
+  author={Graves, Alex and Wayne, Greg and Reynolds, Malcolm and Harley, Tim and Danihelka, Ivo and Grabska-Barwi{\'n}ska, Agnieszka and Colmenarejo, Sergio G{\'o}mez and Grefenstette, Edward and Ramalho, Tiago and Agapiou, John and others},
   journal={Nature},
   volume={538},
   number={7626},
   pages={471--476},
   year={2016},
-  url={https://doi.org/10.1038/nature20101}
+  publisher={Nature Publishing Group}
 }
 
 @inproceedings{Weston2015,
-  title={Memory networks},
+  title={Memory Networks},
   author={Weston, Jason and Chopra, Sumit and Bordes, Antoine},
-  booktitle={ICLR},
-  year={2015},
-  url={https://arxiv.org/abs/1410.3916}
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2015}
 }
 
 @inproceedings{Wu2022,
-  title={Memorizing transformers},
+  title={Memorizing Transformers},
   author={Wu, Yuhuai and Rabe, Markus N and Hutchins, DeLesley and Szegedy, Christian},
-  booktitle={ICLR},
-  year={2022},
-  url={https://arxiv.org/abs/2203.08913}
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2022}
 }
 
 @inproceedings{Borgeaud2022,
-  title={Improving language models by retrieving from trillions of tokens},
-  author={Borgeaud, Sebastian and Mensch, Arthur and Hoffmann, Jordan and others},
-  booktitle={ICML},
+  title={Improving Language Models by Retrieving from Trillions of Tokens},
+  author={Borgeaud, Sebastian and Mensch, Arthur and Hoffmann, Jordan and Cai, Trevor and Rutherford, Eliza and Millican, Katie and Van Den Driessche, George Bm and Lespiau, Jean-Baptiste and Damoc, Bogdan and Clark, Aidan and others},
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={2206--2240},
   year={2022},
-  url={https://arxiv.org/abs/2112.04426}
+  organization={PMLR}
 }
 
 % Selective Prediction and Calibration
@@ -53,181 +51,170 @@
   volume={16},
   number={1},
   pages={41--46},
-  year={1970}
+  year={1970},
+  publisher={IEEE}
 }
 
 @article{ElYaniv2010,
   title={On the foundations of noise-free selective classification},
   author={El-Yaniv, Ran and Wiener, Yair},
-  journal={JMLR},
+  journal={Journal of Machine Learning Research},
   volume={11},
   pages={1605--1641},
   year={2010}
 }
 
 @inproceedings{Geifman2017,
-  title={Selective classification for deep neural networks},
+  title={Selective Classification for Deep Neural Networks},
   author={Geifman, Yonatan and El-Yaniv, Ran},
-  booktitle={NeurIPS},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={30},
   year={2017}
 }
 
 @inproceedings{Guo2017,
-  title={On calibration of modern neural networks},
+  title={On Calibration of Modern Neural Networks},
   author={Guo, Chuan and Pleiss, Geoff and Sun, Yu and Weinberger, Kilian Q},
-  booktitle={ICML},
-  year={2017}
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={1321--1330},
+  year={2017},
+  organization={PMLR}
 }
 
 @inproceedings{Madras2018,
-  title={Learning to defer},
+  title={Predict Responsibly: Improving Fairness and Accuracy by Learning to Defer},
   author={Madras, David and Pitassi, Toniann and Zemel, Richard},
-  booktitle={ICML},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={31},
   year={2018}
 }
 
 % Continual Learning
 @article{Kirkpatrick2017,
   title={Overcoming catastrophic forgetting in neural networks},
-  author={Kirkpatrick, James and Pascanu, Razvan and Rabinowitz, Neil and others},
-  journal={PNAS},
+  author={Kirkpatrick, James and Pascanu, Razvan and Rabinowitz, Neil and Veness, Joel and Desjardins, Guillaume and Rusu, Andrei A and Milan, Kieran and Quan, John and Ramalho, Tiago and Grabska-Barwinska, Agnieszka and others},
+  journal={Proceedings of the National Academy of Sciences},
   volume={114},
   number={13},
   pages={3521--3526},
-  year={2017}
+  year={2017},
+  publisher={National Acad Sciences}
 }
 
 @inproceedings{Rolnick2019,
-  title={Experience replay for continual learning},
-  author={Rolnick, David and Ahuja, Arun and Schwarz, Jonathan and Lillicrap, Timothy P and Wayne, Greg},
-  booktitle={NeurIPS},
+  title={Experience Replay for Continual Learning},
+  author={Rolnick, David and Ahuja, Arun and Schwarz, Jonathan and Lillicrap, Timothy and Wayne, Greg},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={32},
   year={2019}
 }
 
-@inproceedings{Rusu2016,
-  title={Progressive neural networks},
-  author={Rusu, Andrei A and Rabinowitz, Neil C and Desjardins, Guillaume and others},
-  booktitle={arXiv preprint arXiv:1606.04671},
+@article{Rusu2016,
+  title={Progressive Neural Networks},
+  author={Rusu, Andrei A and Rabinowitz, Neil C and Desjardins, Guillaume and Soyer, Hubert and Kirkpatrick, James and Kavukcuoglu, Koray and Pascanu, Razvan and Hadsell, Raia},
+  journal={arXiv preprint arXiv:1606.04671},
   year={2016}
 }
 
 % Parameter-Efficient Fine-Tuning
 @inproceedings{Hu2022,
-  title={{LoRA}: Low-rank adaptation of large language models},
-  author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and others},
-  booktitle={ICLR},
-  year={2022},
-  url={https://arxiv.org/abs/2106.09685}
+  title={{LoRA}: Low-Rank Adaptation of Large Language Models},
+  author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2022}
 }
 
 @inproceedings{Houlsby2019,
-  title={Parameter-efficient transfer learning for {NLP}},
-  author={Houlsby, Neil and Giurgiu, Andrei and Jastrzebski, Stanislaw and others},
-  booktitle={ICML},
-  year={2019}
+  title={Parameter-Efficient Transfer Learning for {NLP}},
+  author={Houlsby, Neil and Giurgiu, Andrei and Jastrzebski, Stanislaw and Morrone, Bruna and De Laroussilhe, Quentin and Gesmundo, Andrea and Attariyan, Mona and Gelly, Sylvain},
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={2790--2799},
+  year={2019},
+  organization={PMLR}
 }
 
 % AI Safety and Alignment
 @article{Bai2022,
-  title={Constitutional {AI}: Harmlessness from {AI} feedback},
-  author={Bai, Yuntao and Kadavath, Saurav and Kundu, Sandipan and others},
+  title={Constitutional {AI}: Harmlessness from {AI} Feedback},
+  author={Bai, Yuntao and Kadavath, Saurav and Kundu, Sandipan and Askell, Amanda and Kernion, Jackson and Jones, Andy and Chen, Anna and Goldie, Anna and Mirhoseini, Azalia and McKinnon, Cameron and others},
   journal={arXiv preprint arXiv:2212.08073},
   year={2022}
 }
 
 @article{Rebedea2023,
-  title={{NeMo} Guardrails: A toolkit for controllable and safe {LLM} applications with programmable rails},
-  author={Rebedea, Traian and Dinu, Razvan and Sreedhar, Makesh and Parisien, Christopher and Cohen, Jonathan},
+  title={{NeMo} Guardrails: A Toolkit for Controllable and Safe {LLM} Applications with Programmable Rails},
+  author={Rebedea, Traian and Dinu, Razvan and Sreedhar, Makesh Narsimhan and Parisien, Christopher and Cohen, Jonathan},
   journal={arXiv preprint arXiv:2310.10501},
   year={2023}
 }
 
 % Retrieval-Augmented Generation
 @inproceedings{Lewis2020,
-  title={Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
-  author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and others},
-  booktitle={NeurIPS},
-  year={2020},
-  url={https://arxiv.org/abs/2005.11401}
-}
-
-% Nested Learning and Related
-@article{Behrouz2025,
-  title={Nested learning},
-  author={Behrouz, Ali and others},
-  journal={arXiv preprint},
-  year={2025}
-}
-
-@article{Meyerson2025,
-  title={{MAKER}: Multi-agent knowledge enabled reasoning},
-  author={Meyerson, Elliot and others},
-  journal={arXiv preprint},
-  year={2025}
+  title={Retrieval-Augmented Generation for Knowledge-Intensive {NLP} Tasks},
+  author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={33},
+  pages={9459--9474},
+  year={2020}
 }
 
 % Foundation Models
-@article{Brown2020,
-  title={Language models are few-shot learners},
-  author={Brown, Tom B and Mann, Benjamin and Ryder, Nick and others},
-  journal={NeurIPS},
-  year={2020},
-  url={https://arxiv.org/abs/2005.14165}
+@inproceedings{Brown2020,
+  title={Language Models are Few-Shot Learners},
+  author={Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={33},
+  pages={1877--1901},
+  year={2020}
 }
 
 @article{Touvron2023,
-  title={{LLaMA}: Open and efficient foundation language models},
-  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and others},
+  title={{LLaMA}: Open and Efficient Foundation Language Models},
+  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
   journal={arXiv preprint arXiv:2302.13971},
-  year={2023},
-  url={https://arxiv.org/abs/2302.13971}
+  year={2023}
 }
 
 % Contrastive Learning
 @inproceedings{Chen2020,
-  title={A simple framework for contrastive learning of visual representations},
+  title={A Simple Framework for Contrastive Learning of Visual Representations},
   author={Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
-  booktitle={ICML},
-  year={2020}
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={1597--1607},
+  year={2020},
+  organization={PMLR}
 }
 
 @inproceedings{Radford2021,
-  title={Learning transferable visual models from natural language supervision},
-  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and others},
-  booktitle={ICML},
-  year={2021}
+  title={Learning Transferable Visual Models From Natural Language Supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={8748--8763},
+  year={2021},
+  organization={PMLR}
 }
 
 % Memory Systems
 @article{Packer2023,
-  title={{MemGPT}: Towards {LLMs} as operating systems},
-  author={Packer, Charles and Wooders, Sarah and Lin, Kevin and others},
+  title={{MemGPT}: Towards {LLMs} as Operating Systems},
+  author={Packer, Charles and Wooders, Sarah and Lin, Kevin and Fang, Vivian and Patil, Shishir G and Stoica, Ion and Gonzalez, Joseph E},
   journal={arXiv preprint arXiv:2310.08560},
   year={2023}
 }
 
 % Out-of-Distribution Detection
 @inproceedings{Hendrycks2017,
-  title={A baseline for detecting misclassified and out-of-distribution examples in neural networks},
+  title={A Baseline for Detecting Misclassified and Out-of-Distribution Examples in Neural Networks},
   author={Hendrycks, Dan and Gimpel, Kevin},
-  booktitle={ICLR},
+  booktitle={International Conference on Learning Representations (ICLR)},
   year={2017}
 }
 
 @inproceedings{Liu2020,
-  title={Energy-based out-of-distribution detection},
-  author={Liu, Weitang and Wang, Xiaoyun and Owens, John D and Li, Yixuan},
-  booktitle={NeurIPS},
+  title={Energy-based Out-of-distribution Detection},
+  author={Liu, Weitang and Wang, Xiaoyun and Owens, John and Li, Yixuan},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={33},
+  pages={21464--21475},
   year={2020}
-}
-
-% Multi-Agent Systems
-@article{Wooldridge1995,
-  title={Intelligent agents: Theory and practice},
-  author={Wooldridge, Michael and Jennings, Nicholas R},
-  journal={The Knowledge Engineering Review},
-  volume={10},
-  number={2},
-  pages={115--152},
-  year={1995}
 }
